fix: reduce product card body gap

--- a/src/assets/styles/pages/solution/_solution_products.scss
+++ b/src/assets/styles/pages/solution/_solution_products.scss
@@ -54,7 +54,7 @@
     &__body {
         display: flex;
         flex-direction: column;
-        gap: 3.2rem;
+        gap: 1.6rem;
     }
 
     &__top {
